@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.1118 2011/05/11 01:46:26 ryoon Exp $
+$NetBSD: CHANGES-2011,v 1.1119 2011/05/11 04:35:53 adam Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -1823,3 +1823,7 @@ Changes to the packages collection and infrastructure in 2011:
 	Added devel/p5-File-DirCompare version 0.6 [abs 2011-05-10]
 	Updated graphics/fotoxx to 11.05.1 [ryoon 2011-05-11]
 	Updated fonts/umefont-ttf to 0.427 [ryoon 2011-05-11]
+	Updated www/squid31 to 3.1.12nb1 [adam 2011-05-11]
+	Added www/c-icap version 0.1.5 [adam 2011-05-11]
+	Added www/c-icap-modules version 0.1.5 [adam 2011-05-11]
+	Added www/squidclamav version 6.2 [adam 2011-05-11]
